Dont include negative margin, prevents overlap

--- a/assets/blocks.editor.css
+++ b/assets/blocks.editor.css
@@ -23,8 +23,6 @@ pre.wp-block-code code {
 		Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 	font-size: 0.85rem;
 	margin-top: 1rem;
-	/* label is above text area so we want to bring closer */
-	margin-bottom: -1rem !important;
 	text-align: right;
 }
 
